<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="Top">상의</string>
    <string name="Bottom">하의</string>
    <string name="Outer">아우터</string>
    <string name="shop">Shop</string>
    <string name="home">홈</string>
    <string name="basket">장바구니</string>
    <string name="mypage">마이페이지</string>
    <string name="login">로그인</string>
    <string name="register_text">회원이 아니라면?</string>
    <string name="register">회원가입</string>
    <string name="password">Password</string>
    <string name="id">ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_ko">아이디</string>
    <string name="pw_ko">비밀번호</string>
    <string name="username_ko">닉네임</string>
    <string name="email_ko">이메일</string>
    <string name="gender_ko">성별</string>
    <string name="birthday_ko">생년월일</string>
    <string name="delete_user">회원탈퇴</string>
</resources>