<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <!-- Main View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:paddingTop="40dp"
        android:orientation="vertical"
        android:background="@color/background_color"
        >

        <!-- Title Logo View -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/shop"
                android:textSize="40sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/line_seed_kr_bd"
                />
        </LinearLayout>

        <!-- Category View -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="none"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnCatTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Top"
                    android:textSize="16sp"
                    android:fontFamily="@font/line_seed_kr_rg"
                    android:background="@drawable/button_style_cat"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/btnCatBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bottom"
                    android:textSize="16sp"
                    android:fontFamily="@font/line_seed_kr_rg"
                    android:background="@drawable/button_style_cat"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/btnCatOuter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Outer"
                    android:textSize="16sp"
                    android:fontFamily="@font/line_seed_kr_rg"
                    android:background="@drawable/button_style_cat"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/btnCatShoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="신발"
                    android:textSize="16sp"
                    android:fontFamily="@font/line_seed_kr_rg"
                    android:background="@drawable/button_style_cat"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/btnCatAccessory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="악세서리"
                    android:textSize="16sp"
                    android:fontFamily="@font/line_seed_kr_rg"
                    android:background="@drawable/button_style_cat"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/btnCatBag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="가방"
                    android:textSize="16sp"
                    android:fontFamily="@font/line_seed_kr_rg"
                    android:background="@drawable/button_style_cat"
                    android:layout_marginEnd="10dp"
                    />

            </LinearLayout>
        </HorizontalScrollView>

        <!-- Product Recycler View -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@drawable/shadow_layout_bottom"
            >

            <!-- RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productRecycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginVertical="20dp"
                app:spanCount="2"
                android:background="#0F0"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>